--- a/app/assets/stylesheets/components/left-nav-sub-content.scss
+++ b/app/assets/stylesheets/components/left-nav-sub-content.scss
@@ -27,6 +27,11 @@
   		a {
   			display: inline;
   		}
+
+  		ul { 
+  			margin-top :10px;
+  		}
+
   		.buttonLinks > li > a {
 			  display: inline-block;
 			}
