--- a/app/views/widgets/primary_content/_collapsables_1.html
+++ b/app/views/widgets/primary_content/_collapsables_1.html
@@ -12,11 +12,30 @@
         <div class="content editableContent">
             <ul>
                 <li>Lebowski ipsum yes, so we were informed.</li>
-                <li>However, we must of course transmit the remains to you in a receptacle.</li>
-                <li>Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary.&#160;</li>
+                <li>However, we must of course transmit the remains to you in a receptacle.
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin erat in vestibulum dapibus. Etiam at varius magna. 
+                            <ul>
+                                <li>Suspendisse consequat ipsum sed quam mollis commodo. Sed hendrerit purus sed ligula feugiat consequat. </li>
+                                <li>In dolor orci, interdum eu placerat euismod, consectetur eget lacus. Proin at hendrerit lacus. </li>
+                            </ul>
+                        </li>
+                        <li>Sed sed orci tellus. Ut arcu enim, interdum ac iaculis nec, faucibus id est. Duis aliquet eget sem sit amet aliquet. Ut ut aliquam ex.</li>
+                    </ul>    
+                </li>
+                <li>Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary.&#160;
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin erat in vestibulum dapibus. Etiam at varius magna. 
+                            <ul>
+                                <li>Suspendisse consequat ipsum sed quam mollis commodo. Sed hendrerit purus sed ligula feugiat consequat. </li>
+                                <li>In dolor orci, interdum eu placerat euismod, consectetur eget lacus. Proin at hendrerit lacus. </li>
+                            </ul>
+                        </li>
+                        <li>Sed sed orci tellus. Ut arcu enim, interdum ac iaculis nec, faucibus id est. Duis aliquet eget sem sit amet aliquet. Ut ut aliquam ex.</li>
+                    </ul>    
+                </li>
                 <li>Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl.&#160;</li>
-                <li>Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry.&#160;</li>
-                <li>May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat.</li>
+                
             </ul>
         </div>
     </div>
