--- a/app/views/widgets/primary_content/_collapsables_2.html
+++ b/app/views/widgets/primary_content/_collapsables_2.html
@@ -22,7 +22,12 @@
         <div class="content editableContent" style="overflow: hidden;">
             <p class="O17">The following criteria are required for 3+2 accelerated admission:</p>
             <ol>
-                <li>Kinesiology undergraduate major at Chapman University.</li>
+                <li>Kinesiology undergraduate major at Chapman University.
+                    <ol>
+                        <li>Suspendisse consequat ipsum sed quam mollis commodo. Sed hendrerit purus sed ligula feugiat consequat. </li>
+                        <li>In dolor orci, interdum eu placerat euismod, consectetur eget lacus. Proin at hendrerit lacus. </li>
+                    </ol>
+                </li>
                 <li>All general education courses completed prior to matriculation.</li>
                 <li>All major Kinesiology major courses completed with the exception of emphasis area courses (24 credits of the MS.AT program will count towards the undergraduate degree requirements and will be used for the area of emphasis within the Kinesiology major).</li>
                 <li>Minimum of 100 completed undergraduate credits prior to matriculation.</li>
