--- a/app/assets/stylesheets/components/button-links.scss
+++ b/app/assets/stylesheets/components/button-links.scss
@@ -1,7 +1,7 @@
 .buttonLinks {
   padding: 0 16px;
   list-style-type: none;
-  margin: 10px 0 16px 0;
+  margin: 0 0 16px 0;
   li {
     margin-bottom: 2px;
 
