Updated college link hover and active states, corrected Chapman red with right hex values, applied dotted bottom border to links on primary content and widgets.

--- a/app/assets/stylesheets/components/breadcrumbs.scss
+++ b/app/assets/stylesheets/components/breadcrumbs.scss
@@ -29,8 +29,7 @@
     }
   }
   a {
-    // text-decoration: underline;
-    border-bottom: 1px dotted #C0C0C0;
+    border-bottom: 2px dotted #c1c1c1;
   }
   .home {
     // display: block;
