--- a/app/assets/stylesheets/widgets/chapman_events_feed.scss
+++ b/app/assets/stylesheets/widgets/chapman_events_feed.scss
@@ -76,7 +76,7 @@
 
 $cef_blue: #407892;
 $cef_black: #353430;
-$cef_red: #a82439;
+$cef_red: #98002e;
 $cef_gray-slate: #62605a;
 $cef_small_screen: $medium-screen;
 $cef_headings-font: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
