--- a/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
+++ b/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
@@ -20,6 +20,9 @@
       padding: 1em 0;
       text-align: center;
       margin:0 6px;
+      a {
+        border: 0;
+      }
     }
     .jcarousel-prev, .jcarousel-next {
       position: absolute;
