--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -6,7 +6,7 @@
     display: inline-block;
     float: none;
     margin: 0 0 20px 12px;
-    //border: 1px solid #c1c1c1;
+    border: 0;
     padding: 10px;
     background: #ffffff;
     -webkit-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
