--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,6 +1,6 @@
 /* Standard Colors
 ---------------------------------------- */
-$red:         #a82439;
+$red:         #98002e;
 $black:       #353430;
 $warm-gray:   #edeade;
 $cool-gray:   #ecebe5;
@@ -79,7 +79,7 @@ $bg-light-gray:      #ecebe5;
 $bg-platinum-gray:   #e5e5e5;
 $bg-silver-gray:     #cfcfcf;
 $bg-off-white:       #f2f2f0;
-$bg-red:             #a82439;
+$bg-red:             #98002e;
 
 
 // Type colors
@@ -90,7 +90,7 @@ $color-yellow:       #cc6700;
 
 
 // CU Brand Colors
-$color-chapman-red:  #a82439;
+$color-chapman-red:  #98002e;
 $color-chapman-blue: #407892;
 $color-chapman-gray: #dad8cf;
 
