--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -26,7 +26,8 @@ $teal2-hover: #01cdd4;
 $teal2-light: #a6ddd1;
 
 $red: $cu-red;
-$red-hover: #c42b43;
+$red-hover: #ba183e;
+$red-active: #7f0026;
 
 $grey: #353430;
 $grey-hover: #4c4b45;
@@ -37,7 +38,7 @@ $grey2-hover: #918e87;
 /* These are colors of common elements or states. */
 
 $cu-font-color: $grey;
-$cu-link-hover: #c52b43;
+$cu-link-hover: #bb223c;
 $cu-link-down: $cu-dark-red;
 $cu-form-shadow: #797564;
 $cu-border: #A58F75;
@@ -60,46 +61,55 @@ to a theme. */
 
 $theme-light-grey: #dbdfcf; // Light grey found in multiple themes
 $theme-yellow: #d4e13c; // Yellow found in multiple themes
-$theme-blue: #006080; // Blue found in multiple themes
+$theme-blue: #006185; // Blue found in multiple themes
 
 $asbe-primary: #006185;
-$asbe-secondary: #004f6b;
+$asbe-secondary: #276b87;
+$asbe-tertiary: #065877;
 
 $ces-primary: #008ec1;
-$ces-secondary: #007299;
+$ces-secondary: #2497c1;
+$ces-tertiary: #0180ad;
 
 $communication-primary: #c88508;
-$communication-secondary: #b87800;
+$communication-secondary: #cb9126;
+$communication-tertiary: #ba7900;
 
 $copa-primary: #69465c;
-$copa-secondary: #4f3445;
+$copa-secondary: #705466;
+$copa-tertiary: #5b334c;
 
 $crean-primary: #1f8a84;
-$crean-secondary: #125e5a;
+$crean-secondary: #38928d;
+$crean-tertiary: #0a7a74;
 
 $dance-primary: #007165;
-$dance-secondary: #005249;
+$dance-secondary: #0e8377;
+$dance-tertiary: #016258;
 
 $dodge-primary: #2f2f2f;
-$dodge-secondary: #1f1f1f;
-$dodge-tertiary: #42413d;
+$dodge-secondary: #3b3b3b;
+$dodge-tertiary: #1f1f1f;
 
 $music-primary: #793141;
-$music-secondary: #592530;
+$music-secondary: #89394b;
+$music-tertiary: #682a38;
 
 $pharmacy-primary: #959300;
-$pharmacy-secondary: #636200;
-$pharmacy-tertiary: #dde2d5;
+$pharmacy-secondary: #a4a215;
+$pharmacy-tertiary: #858300;
 
 $scst-primary: #4A5E0F;
-$scst-secondary: #36450B;
-$scst-tertiary: #99a12b;
+$scst-secondary: #576b1c;
+$scst-tertiary: #3d4f09;
 
 $theatre-primary: #002e5f;
-$theatre-secondary: #001f40;
+$theatre-secondary: #063b74;
+$theatre-tertiary: #01254c;
 
 $wilkinson-primary: #008ec1;
-$wilkinson-secondary: #007299;
+$wilkinson-secondary: #209cc9;
+$wilkinson-tertiary: #007ba7;
 
 /* Our Base Spacing Unit: Use multiples of this variable */
 $base-spacing: 16px;
