--- a/app/assets/stylesheets/components/button-links.scss
+++ b/app/assets/stylesheets/components/button-links.scss
@@ -8,12 +8,14 @@
     a {
       background-color: $white;
       font-size: 13px;
-      color: #8f0c30;
+      color: $cu-red;
       padding: 8px 10px 8px 10px;
       margin: 0 auto 0 auto;
+      width: 100%;
       display: inline-block;
       &:hover {
         background-color: #fcfafb;
+        color: #bb223c;
       }
       &:after {
         content: ' »';
