--- a/app/assets/stylesheets/themes/copa__dance.scss
+++ b/app/assets/stylesheets/themes/copa__dance.scss
@@ -12,6 +12,7 @@
 
   .rightColumn .styleTwo a {
     color: #ffffff;
+    border-bottom: 2px dotted #728b88;
   }
 
   .nameBarButtons li a {
@@ -38,13 +39,12 @@
   }
 
   .newbutton a {
-    border: 1px solid $dance-primary;
-    background-color: $dance-primary;;
-    
+    background-color: $dance-primary;
     &:hover {
-      border: 1px solid $dance-primary;
-      background-color: $dance-primary;;
-    
+      background-color: $dance-secondary;
+    }
+    &:active {
+      background-color: $dance-tertiary;
     }
   }
 
