--- a/app/assets/stylesheets/themes/dodge.scss
+++ b/app/assets/stylesheets/themes/dodge.scss
@@ -17,12 +17,13 @@
     }
     a {
   	  color: $white;
-  	  text-decoration: underline;
+  	  border-bottom: 2px dotted #676767;
   	}
   }
 
   .nameBarButtons li a {
     color: $dodge-primary;
+    border-bottom: 2px dotted #74868c;
   }
 
   .expandedNameBarContainer h2 {
@@ -51,13 +52,12 @@
   }
 
   .newbutton a {
-    border: 1px solid $black;
     background-color: $dodge-primary;
-    
     &:hover {
-      border: 1px solid $black;
-      background-color: $dodge-primary;
-    
+      background-color: $dodge-secondary;
+    }
+    &:active {
+      background-color: $dodge-tertiary;
     }
   }
 
