--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -21,7 +21,7 @@ $tab-content-border-color: #c1c1c1;
   clear: both;
   display: inline-block;
 
-  a { border-bottom: none; }
+  a { border-bottom: none; text-decoration: none;}
   // Story titles
   h3 {
     margin: 10px 0 0 0;
