--- a/app/assets/stylesheets/widgets/primary_column/regions.scss
+++ b/app/assets/stylesheets/widgets/primary_column/regions.scss
@@ -70,6 +70,9 @@ div.four-col-float {
     list-style-type: none;
     padding: 0;
     float: left;
+    a {
+      border-bottom: 0;
+    }
   }
 }
 
