--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -54,7 +54,7 @@
       border-bottom: 2px dotted #adadad;
     }
     .border {
-      background-color: #c1c1c1;
+      background-color: #676767;
     }
   }
   .linkList {
