--- a/app/assets/stylesheets/themes/ces.scss
+++ b/app/assets/stylesheets/themes/ces.scss
@@ -14,7 +14,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: $theme-blue;
+    background-color: $ces-tertiary;
   }
 
   .rightColumn .styleTwo a {
