--- a/app/assets/stylesheets/themes/communication.scss
+++ b/app/assets/stylesheets/themes/communication.scss
@@ -7,7 +7,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: #b47500;
+    background-color: $communication-tertiary;
   }
 
   .rightColumn .styleTwo a {
