--- a/app/assets/stylesheets/themes/copa.scss
+++ b/app/assets/stylesheets/themes/copa.scss
@@ -7,7 +7,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: #36232f;
+    background-color: $copa-tertiary;
   }
 
   .rightColumn .styleTwo a {
