--- a/app/assets/stylesheets/themes/copa__dance.scss
+++ b/app/assets/stylesheets/themes/copa__dance.scss
@@ -7,7 +7,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: #003832;
+    background-color: $dance-tertiary;
   }
 
   .rightColumn .styleTwo a {
