--- a/app/assets/stylesheets/themes/crean.scss
+++ b/app/assets/stylesheets/themes/crean.scss
@@ -7,7 +7,7 @@
   }
 	
     .rightColumn .styleTwo .border { 
-		background-color: $crean-secondary; 
+		background-color: $crean-tertiary; 
 	}
 
     .rightColumn .styleTwo a {
