--- a/app/assets/stylesheets/themes/dodge.scss
+++ b/app/assets/stylesheets/themes/dodge.scss
@@ -8,7 +8,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: #676767;
+    background-color: $dodge-tertiary;
   }
 
   .styleTwo {
