--- a/app/assets/stylesheets/themes/pharmacy.scss
+++ b/app/assets/stylesheets/themes/pharmacy.scss
@@ -9,7 +9,7 @@
 
   .rightColumn .styleTwo {
     .border {
-      background-color: #bebd69;
+      background-color: $pharmacy-tertiary;
     }
     a {
       color: #ffffff;
