--- a/app/assets/stylesheets/themes/wilkinson.scss
+++ b/app/assets/stylesheets/themes/wilkinson.scss
@@ -8,7 +8,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: $theme-blue;
+    background-color: $wilkinson-tertiary;
   }
 
   .rightColumn .styleTwo a {
