--- a/app/views/widgets/left_column/_callout_1.html
+++ b/app/views/widgets/left_column/_callout_1.html
@@ -1,7 +1,7 @@
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>
     <h2>10+ Years of Rails with DHH</h2>
-    <div class="editableContent"><span>Our guest this week is David Heinemeier Hansson, aka DHH. He joins us to talk through the past, present, and future of Ruby on Rails &#8212; the most beloved web application framework in the Ruby community.</span>
+    <div class="editableContent"><span>Our guest this week is David Heinemeier Hansson, aka DHH. He joins us to talk through the past, present, and future of <a href="#">Ruby on Rails</a> &#8212; the most beloved web application framework in the Ruby community.</span>
     <ul>
       <li>Item 1</li>
       <li>Item 1</li>
