--- a/app/assets/stylesheets/themes/business.scss
+++ b/app/assets/stylesheets/themes/business.scss
@@ -10,7 +10,11 @@
     color: $asbe-primary;
   }
 
-  div.styleTwo a {
+  .rightColumn .styleTwo .border {
+    background-color: $asbe-tertiary;
+  }
+
+  .rightColumn .styleTwo a {
     color: $white;
     border-bottom: 2px dotted #74868c;
   }
