--- a/app/assets/stylesheets/themes/copa__music.scss
+++ b/app/assets/stylesheets/themes/copa__music.scss
@@ -8,7 +8,7 @@
   }
 	
     .rightColumn .styleTwo .border { 
-		background-color: $music-secondary; 
+		background-color: $music-tertiary; 
 	}
 
     .rightColumn .styleTwo a {
