--- a/app/assets/stylesheets/themes/copa__theatre.scss
+++ b/app/assets/stylesheets/themes/copa__theatre.scss
@@ -8,7 +8,7 @@
   }
 
   .rightColumn .styleTwo .border {
-    background-color: #001226;
+    background-color: $theatre-tertiary;
   }
 
   .rightColumn .styleTwo a {
