--- a/app/assets/stylesheets/base/defaults.scss
+++ b/app/assets/stylesheets/base/defaults.scss
@@ -373,7 +373,7 @@ p, li {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'proxima-nova', arial, verdana, sans-serif;
+  font-family: 'futura-pt', arial, verdana, sans-serif;
 }
 
 h2, h3, h4, h5, h6 {
