--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -79,7 +79,7 @@
 
 //Headings
 @mixin main_heading($weight: 800) {
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 22px;
 	line-height: 26px;
 	margin-top: 12px;
@@ -102,7 +102,7 @@
 }
 
 @mixin sub_heading($weight: 800) {
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 32px;
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
@@ -113,7 +113,7 @@
 }
 
 @mixin section_heading($weight: 800) {
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 22px;
 	line-height: 26px;
 
@@ -135,7 +135,7 @@
 }
 
 @mixin sub_section_heading($weight: 800) {
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 18px;
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
@@ -146,7 +146,7 @@
 }
 
 @mixin content_heading($weight: 800) {
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 14px;
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
@@ -158,7 +158,7 @@
 
 @mixin content_label() {
 	margin-bottom: 0px;
-	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 20px;
 	line-height: 26px;
 	font-weight: 300;
