--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -21,5 +21,5 @@
   
   img { display: block; }
   h3 { margin: 5px 0; }
-  h2 { font-size: 14px; }
+  h2 { font-size: 14px; font-family: "proxima-nova", sans-serif;}
 }
