--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -21,7 +21,7 @@
   clear: both;
   position: relative;
   overflow: hidden;
-  min-height: 300px;
+  height: 300px;
   padding: 15px 0 80px 0;
   background: #333333 no-repeat center;
   background-size: cover;
@@ -132,25 +132,31 @@
   }
 }
 
+@media only screen and (min-width: 480px) {
+  #hero .actions {
+    margin-top: 25px;
+  }
+}
+
 @media only screen and (min-width: 780px) {
   #hero {
-    min-height: 350px;
+    height: 400px;
     padding: 15px 0 150px 0;
     .actions {
-      margin-top: 70px;
+      margin-top: 50px;
     }
   }
 }
 
 @media only screen and (min-width: 1180px) {
   #hero {
-    min-height: 450px;
+    height: 500px;
   }
 }
 
 @media only screen and (min-width: 1480px) {
   #hero {
-    min-height: 550px;
+    height: 600px;
   }
 }
 
@@ -191,17 +197,17 @@
 @media only screen and (min-width: 780px) {
   #hero {
     .heading {
-      font-size: 48px;
-      line-height: 48px;
-      padding-top: 100px;
+      font-size: 40px;
+      line-height: 40px;
+      padding-top: 70px;
     }
     .subheading {
-      font-size: 48px;
-      line-height: 48px;
+      font-size: 40px;
+      line-height: 40px;
     }
     .excerpt {
-      font-size: 18px;
-      line-height: 22px;
+      font-size: 16px;
+      line-height: 20px;
     }
     .heading {
       &.uppercase, &.lowercase, &.extended {}
@@ -216,11 +222,16 @@
   }
 }
 
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 1180px) {
   #hero {
-    .heading, .subheading {
-      font-size: 52px;
-      line-height: 52px;
+    .heading {
+      font-size: 48px;
+      line-height: 48px;
+      padding-top: 100px;
+    }
+    .subheading {
+      font-size: 48px;
+      line-height: 48px;
     }
     .excerpt {
       font-size: 18px;
