--- a/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
+++ b/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
@@ -35,7 +35,7 @@
           <!-- CASCADE
           <p class="header-text-desktop">$headerText</p>
           -->
-          <p class="header-text-desktop">$headerText</p>
+          <p class="header-text-desktop"><%= ad_landing.header_text %></p>
         </div>
       </div>
 
@@ -54,13 +54,14 @@
       </div>
       -->
       <div class="masthead-hero">
-        <div class="background-image" style="">
+        <div class="background-image"
+             style="background-image: url('<%= asset_path(ad_landing.background_image) %>');">
           <div class="outer-background-overlay"></div>
-          <article style="">
+          <article style="background-image: url('<%= ad_landing.background_image %>');">
             <div class="inner-background-overlay"></div>
             <div class="content">
-              <h1 class="title">TODO: title</h1>
-              <h2 class="subtitle">TODO: subtitle</h2>
+              <h1 class="title"><%= ad_landing.hero_title %></h1>
+              <h2 class="subtitle"><%= ad_landing.hero_subtitle %></h2>
             </div>
           </article>
         </div>
@@ -71,14 +72,17 @@
           <!-- CASCADE
           <h2>$_EscapeTool.xml($formTitle)</h2>
           -->
-          <h2><%= @dd.document.at_xpath('//group[@identifier="form"]/text[@identifier="title"]').content %></h2>
+          <h2><%= ad_landing.form_title %></h2>
 
           <div class="calls-to-action">
             <div id="form_a4517720-e7d7-4e0e-bafd-2c1045918e0d">Loading...</div>
             <script>/*<![CDATA[*/
               var script = document.createElement('script');
               script.async = 1;
-              script.src = 'https://go.chapman.edu/register/?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' + ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
+              script.src = 'https://go.chapman.edu/register/' +
+                           '?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&' +
+                           'div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' +
+                           ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
               var s = document.getElementsByTagName('script')[0];
               s.parentNode.insertBefore(script, s);
             /*]]>*/</script>
