--- a/app/views/widgets/ad_landing_page/_masthead.html
+++ b/app/views/widgets/ad_landing_page/_masthead.html
@@ -8,10 +8,9 @@
   </div>
 
   <div class="masthead-hero">
-    <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
-      <div class="outer-background-overlay"></div>
-      <article style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
-        <div class="inner-background-overlay"></div>
+    <!-- There are two elements with background images because of the major design difference between the mobile and desktop layouts -->
+    <div class="background-image" title="desktop hero background image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
+      <article title="mobile hero background image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
         <div class="content">
           <h1 class="title">Turn your passion, knowledge and experience into a rewarding career.</h1>
           <h2 class="subtitle">Earn your Masters Degree at Dodge College of Film and Media Arts.</h2>
