--- a/app/assets/stylesheets/themes/pharmacy.scss
+++ b/app/assets/stylesheets/themes/pharmacy.scss
@@ -2,7 +2,7 @@
 #theme.pharmacy {
   @include theme-color-classes($pharmacy-primary);
   
-  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .outer-background-overlay, .inner-background-overlay {
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $pharmacy-primary; /* Old browsers */
   	
   }
