--- a/app/assets/stylesheets/themes/scst.scss
+++ b/app/assets/stylesheets/themes/scst.scss
@@ -2,7 +2,7 @@
 #theme.scst {
   @include theme-color-classes($scst-primary);
 
-  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .outer-background-overlay, .inner-background-overlay {
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $scst-primary; /* Old browsers */
   	
   }
