--- a/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
+++ b/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
@@ -28,14 +28,24 @@
 -->
 
     <div class="ad-landing-masthead">
+      <!-- CASCADE
       <div class="masthead-header">
-        <img class="header-mobile"/>
+        <img class="header-mobile" #outputSrc($mobileLogoFields) alt="$_EscapeTool.xml($mobileLogoFields.getChild('alternateText').value)"/>
         <div class="header-desktop">
-          <img class="header-logo-desktop"/>
-          <!-- CASCADE
+          <img class="header-logo-desktop" #outputSrc($desktopLogoFields) alt="$_EscapeTool.xml($desktopLogoFields.getChild('alternateText').value)"/>
           <p class="header-text-desktop">$headerText</p>
-          -->
-          <p class="header-text-desktop"><%= ad_landing.header_text %></p>
+        </div>
+      </div>
+      -->
+      <div class="masthead-header">
+        <img class="header-mobile"
+             src="<%= ad_landing.get_child_value(:mobile_logo_src) %>"
+             alt="<%= ad_landing.get_child_value(:mobile_logo_alt) %>"/>
+        <div class="header-desktop">
+          <img class="header-logo-desktop"
+               src="<%= ad_landing.get_child_value(:desktop_logo_src) %>"
+               alt="<%= ad_landing.get_child_value(:desktop_logo_alt) %>"/>
+          <p class="header-text-desktop"><%= ad_landing.get_child_value(:header_text, true) %></p>
         </div>
       </div>
 
@@ -55,13 +65,13 @@
       -->
       <div class="masthead-hero">
         <div class="background-image"
-             style="background-image: url('<%= asset_path(ad_landing.background_image) %>');">
+             style="background-image: url('<%= ad_landing.get_child_value(:background_image) %>');">
           <div class="outer-background-overlay"></div>
-          <article style="background-image: url('<%= ad_landing.background_image %>');">
+          <article style="background-image: url('<%= ad_landing.get_child_value(:background_image) %>');">
             <div class="inner-background-overlay"></div>
             <div class="content">
-              <h1 class="title"><%= ad_landing.hero_title %></h1>
-              <h2 class="subtitle"><%= ad_landing.hero_subtitle %></h2>
+              <h1 class="title"><%= ad_landing.get_child_value(:hero_title) %></h1>
+              <h2 class="subtitle"><%= ad_landing.get_child_value(:hero_subtitle) %></h2>
             </div>
           </article>
         </div>
@@ -72,16 +82,17 @@
           <!-- CASCADE
           <h2>$_EscapeTool.xml($formTitle)</h2>
           -->
-          <h2><%= ad_landing.form_title %></h2>
+          <h2><%= ad_landing.get_child_value(:form_title) %></h2>
 
           <div class="calls-to-action">
-            <div id="form_a4517720-e7d7-4e0e-bafd-2c1045918e0d">Loading...</div>
+            <div id="form_<%= ad_landing.get_child_value(:form_id) %>">Loading...</div>
             <script>/*<![CDATA[*/
               var script = document.createElement('script');
               script.async = 1;
               script.src = 'https://go.chapman.edu/register/' +
-                           '?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&' +
-                           'div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' +
+                           '?id=<%= ad_landing.get_child_value(:form_id) %>&' +
+                           'output=embed&' +
+                           'div=form_<%= ad_landing.get_child_value(:form_id) %>' +
                            ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
               var s = document.getElementsByTagName('script')[0];
               s.parentNode.insertBefore(script, s);
