Adds some TODO comments.

--- a/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
+++ b/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
@@ -5,7 +5,7 @@
   # - /_cascade/formats/modular/Ad Landing/widget/masthead-hero
   # - http://dev-cascade.chapman.edu/entity/open.act?id=bb5d6979c0a81453442fbe479f0e0571&type=format&
   #
-  # This tries to preserve the original markup and only tweak as needed for Rails.
+  # Initially, I tried to preserve the original markup and only tweak as needed for Rails.
   #
   # Code wrapped in <!-- CASCADE ... --> comment tags indicate original disabled markup.
   # %>
