started implementing stories feed widget

--- a/app/views/1_column/landing_page.html.erb
+++ b/app/views/1_column/landing_page.html.erb
@@ -8,6 +8,7 @@
       - single_column/call_to_action_block
       - single_column/chapman_events_feed
       - single_column/chapman_social_feed
+      - single_column/chapman_stories_feed
       - single_column/messaging_2_column_facts
       - single_column/messaging_2_column
       - single_column/messaging_2_column_video
