--- a/app/views/widgets/single_column/_chapman_stories_feed.html
+++ b/app/views/widgets/single_column/_chapman_stories_feed.html
@@ -1,12 +1,13 @@
-<div class="chapman-stories-feed-widget">
+<div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg">
 	<div class="outer-container">
+		<h2 class="social-feed-title">Stories at Chapman University</h2>
 		<div class="feed-column top-story">
 			<div data-chapman-top-story="https://blogs.chapman.edu/dodge/2016/10/20/alumni-spotlight-justin-deimen/"></div>
 		</div>
 		<div class="feed-column stories-feed">
 			<div data-chapman-stories-feed="https://blogs.chapman.edu/law"></div>
 			<div class="actions">
-				<a href="https://blogs.chapman.edu">View more stories</a>
+				<a class="theme-button" href="https://blogs.chapman.edu">View more stories</a>
 			</div>
 		</div>
 	</div>
