Refactors ChapmanStoriesFeed jQuery plugin and sample.

--- a/app/views/widgets/single_column/_chapman_stories_feed.html
+++ b/app/views/widgets/single_column/_chapman_stories_feed.html
@@ -1,14 +1,9 @@
-<div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg">
-	<div class="outer-container">
-		<h2 class="social-feed-title">Stories at Chapman University</h2>
-		<div class="feed-column top-story">
-			<div data-chapman-top-story="https://blogs.chapman.edu/dodge/2016/10/20/alumni-spotlight-justin-deimen/"></div>
-		</div>
-		<div class="feed-column stories-feed">
-			<div data-chapman-stories-feed="https://blogs.chapman.edu/law"></div>
-			<div class="actions">
-				<a class="theme-button" href="https://blogs.chapman.edu">View more stories</a>
-			</div>
-		</div>
-	</div>
+<div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg"
+     data-chapman-stories-feed-url="https://blogs.chapman.edu/law"
+     data-chapman-top-story-url="https://blogs.chapman.edu/dodge/2016/10/20/alumni-spotlight-justin-deimen/"
+     data-chapman-stories-title="Chapman Stories Feed Widget"
+     data-chapman-stories-bg-color="pink"
+     data-chapman-stories-button-label="More Stories, Please!"
+     data-chapman-stories-button-url="https://blogs.chapman.edu/">
+    Chapman Stories Feed Widget (loads dynamically)
 </div>
