home page link/hover/active button color changes

--- a/app/assets/stylesheets/widgets/home_page/blog_stories.scss
+++ b/app/assets/stylesheets/widgets/home_page/blog_stories.scss
@@ -42,7 +42,7 @@
       }
       .title {
         text-transform: none;
-        color: #a82439;
+        color: #98002e;
         font-size: 24px;
         line-height: 24px;
         margin: 0;
@@ -62,7 +62,7 @@
       }
       .source a:hover, a.tag:hover {
         opacity: 0.8;
-        color: #a82439;
+        color: #98002e;
       }
     }
     .third {
@@ -160,7 +160,7 @@
         max-height: 265px;
       }
       .title {
-        color: #a82439;
+        color: #98002e;
         text-transform: none;
         min-height: 50px;
       }
@@ -176,7 +176,7 @@
       width: 100%;
       margin-bottom: 15px;
       border: 1px solid #d8d8d8;
-      color: #a82439;
+      color: #98002e;
       background: #FFFFFF;
       box-shadow: 0 rgba(0, 0, 0, 0.1);
       border-radius: 3px;
@@ -190,7 +190,7 @@
         background-color: #fff;
       }
       a {
-        color: #a82439;
+        color: #98002e;
         text-decoration: none;
       }
       p {
@@ -242,7 +242,7 @@
         display: inline-block;
         padding: 5px 10px 5px 20px;
         /*background:#f7f6f0;*/
-        /*border-left:5px solid #a82439;*/
+        /*border-left:5px solid #98002e;;*/
         margin: 15px 0 0 0;
         color: #62605a;
         text-decoration: none;
@@ -292,7 +292,7 @@
         &:hover a {
           z-index: 2;
           opacity: 1;
-          color: #a82439;
+          color: #98002e;
         }
         a {
           padding: 14px 50px 13px 24px;
@@ -442,7 +442,7 @@
 
 /* Expand long titles */
 
-/*.stories .story .tag:hover { background: #eceadf; color:#a82439; padding-left:25px; }*/
+/*.stories .story .tag:hover { background: #eceadf; color:#98002e;; padding-left:25px; }*/
 
 @media only screen and (min-width: 980px) {
   .homepage {
