Change off-white to white, and replace warm gray to greyscale.

--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -7,7 +7,7 @@
 
 /* News Events Wrapper
 ---------------------------------------- */
-$tab-content-bg-color: #f5f5f5;
+$tab-content-bg-color: $white;
 $tab-content-border-color: #c1c1c1;
 
 .news-events-widget {
