--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -13,9 +13,9 @@ $cu-red-rgb-transparent: rgba(168,36,57,0.95);
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
 $cu-light-grey: #eaeaea;
-$cu-warm-light-grey: #EDEADE;
+$cu-warm-light-grey: #eaeaea;
 
-$white: #fff;
+$white: #ffffff;
 $brown: #896d49;
 
 $teal: #25b6a5;
@@ -29,7 +29,7 @@ $red: $cu-red;
 $red-hover: #ba183e;
 $red-active: #7f0026;
 
-$grey: #353430;
+$grey: #2f2f2f;
 $grey-hover: #4c4b45;
 
 $grey2: #6e6e66;
