updates to stories-feed plugin

--- a/app/assets/stylesheets/widgets/single_column/chapman_stories_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_stories_feed.scss
@@ -42,7 +42,7 @@
 	}
 
 	.top_story_post_tile, .post_tile {
-		padding: 12px 24px;
+		padding: 20px 24px;
 		background-color: white;
 	}
 
@@ -127,8 +127,7 @@
 		background-repeat: no-repeat;
 	}
 
-	.actions {
-		display: block;
+	.theme-button {
 		text-align: center;
 		margin-top: 48px;
 
