Remove border bottom link effect from "addthis" social media toolbox.

--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -119,7 +119,10 @@
 	  }
 	  @include bp(l) {
 	  	float: left;
-      max-width: 465px;
+      	max-width: 465px;
+	  }
+	  .addthis_toolbox a {
+	  	border-bottom: 0;
 	  }
 	}
 }
