Replace warm grey with greyscale.

--- a/app/assets/stylesheets/components/left-nav.scss
+++ b/app/assets/stylesheets/components/left-nav.scss
@@ -22,7 +22,7 @@
   }
   a {
     font-style: normal;
-    color: #62605a;
+    color: #676767;
     margin-left: 0;
     &:hover {
       color: $cu-red;
