--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -41,7 +41,7 @@
         position: relative;
         z-index: 667;
         background-color: white;
-        padding: 24px 32px;
+        padding: 24px 0 24px 32px;
         font-size: 20px;
         line-height: 24px;
         border-bottom:1px solid #d8d8d8;
@@ -61,7 +61,6 @@
         text-align: right;
         font-size: 20px;
         text-transform: uppercase;
-        padding-right: 8px;
         vertical-align: middle;
         margin: 0;
       }
@@ -126,6 +125,7 @@
       float: right;
       padding: $one-column-widget-spacing/2 $one-column-widget-spacing/2 $one-column-widget-spacing $one-column-widget-spacing/2;
       pointer-events: all;
+      min-height: 320px; //creates spacing on page load (while form is loading) between masthead content and header bar.
     }
 
     h2 {
@@ -187,7 +187,7 @@
     color: white;
     pointer-events: all;
     position: relative;
-    padding: 24px;
+    padding: 24px 32px;
     z-index: 667;
 
     @include media($medium-screen) {
