Replace instances of proxima-nova-soft with proxima-nova; correct font-family value syntax; correct grey hex value; correct font weight

--- a/app/assets/stylesheets/components/cu-companion-bar.scss
+++ b/app/assets/stylesheets/components/cu-companion-bar.scss
@@ -1,5 +1,5 @@
 // #cu_companion_bar {
-// 	font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, Verdana, "Sans Serif";
+// 	font-family: "proxima-nova", verdana, sans-serif;
 //   background: #969696;
 //   color: #DDD;
 //   left: 0;
