--- a/app/assets/stylesheets/components/flexslider.scss
+++ b/app/assets/stylesheets/components/flexslider.scss
@@ -178,7 +178,7 @@ html[xmlns] .slides {
       // font-size: 12px;
       font-size: 14px;
       // font-family: 'Open Sans';
-      font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
+      font-family: "proxima-nova", verdana, sans-serif;
       // padding: 10px 0 10px 0;
       padding: 8px 0 7px 0;
       text-align: center;
