--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -94,7 +94,7 @@
 	  background: $white;
 	}
   a {
-    font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
+    font-family: "proxima-nova", sans-serif;
     display: block;
     padding: 7px 0 0 0;
   }
@@ -125,7 +125,7 @@
       	padding: 7px 40px 7px 20px;
       	font-size:16px;
       	color: $white;
-      	font-weight: 800;
+      	font-weight: 600;
       	border: 1px solid #2f2f2f;
       	&:hover {
 	        	background-color: $white;
