--- a/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman_social_feed.scss
@@ -293,7 +293,7 @@ $tile_width: 335px;
 		}
 
 		.message time {
-			font: regular 14px/14px 'proxima-nova-soft';
+			font: regular 14px/14px "proxima-nova";
 		}
 
 		.message .tag {
