--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -158,7 +158,7 @@
 
 @mixin content_label() {
 	margin-bottom: 0px;
-	font-family: 'futura-pt', "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+	font-family: 'futura-pt', verdana, sans-serif;
 	font-size: 20px;
 	line-height: 26px;
 	font-weight: 300;
@@ -183,7 +183,7 @@
 
 @mixin p_small() {
 	margin-top: 24px;
-	font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, Verdana, "Sans Serif";
+	font-family: "proxima-nova", verdana, sans-serif;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 18px;
