--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,7 @@
 /* Standard Colors
 ---------------------------------------- */
 $red:         #98002e;
-$black:       #353430;
+$black:       #2f2f2f;
 $warm-gray:   #edeade;
 $cool-gray:   #ecebe5;
 
@@ -83,7 +83,7 @@ $bg-red:             #98002e;
 
 
 // Type colors
-$color-dark-gray:    #353430;
+$color-dark-gray:    #2f2f2f;
 $color-light-gray:   #9a9996;
 $color-green:        #43ac6a;
 $color-yellow:       #cc6700;
