--- a/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
+++ b/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
@@ -2,7 +2,7 @@
   margin: 1em 0;
   position: relative;
   h2.header {
-    color: #353430;
+    color: $grey;
     text-transform: uppercase;
     font-size: 1.3em;
     font-weight: bold;
