updated default top_story handling

--- a/app/views/widgets/single_column/_chapman_stories_feed.html
+++ b/app/views/widgets/single_column/_chapman_stories_feed.html
@@ -1,6 +1,6 @@
 <div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg"
-     data-chapman-stories-feed-url="https://blogs.chapman.edu/dodge/"
-     data-chapman-stories-top-story-url="https://blogs.chapman.edu/dodge/2016/10/20/alumni-spotlight-justin-deimen/"
+     data-chapman-stories-feed-url="https://blogs.chapman.edu/law/"
+     data-chapman-stories-top-story-url=""
      data-chapman-stories-title="Chapman Stories Feed Widget"
      data-chapman-stories-bg-color=""
      data-chapman-stories-button-label="More Stories, Please!"
